--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Tianxiao Cheng</h1>
-    <img src="./headshot.jpg" height="100" />
+    <img src="../public/headshot.jpg" height="100" />
     <h2>Summary</h2>
     I am a hardworking and passinate individual Web Developer.
     <hr />
@@ -59,7 +59,13 @@
         <li>First-class scholarship for Merit Student (Dec 2020)</li>
         <li>China National Scholarship for ranking first (Dec 2019)</li>
     </ul>
+    <hr />
 
+    <h2>other</h2>
+    <ul>
+        <li><a href="../public/hobby.html">My Hobbies</a></li>
+        <li><a href="../public/contact.html">Contact Me</a></li>
+    </ul>
 
 </body>
 </html>
