--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </ul>
     <hr />
 
-    <h2>Work Experice</h2>
+    <h2>Work Experience</h2>
     <ul>
         <li>
             <h3>Global Study Academic Coordinator - University of California, Davis</h3>
