--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Tianxiao Cheng</h1>
-    <img src="../public/headshot.jpg" height="100" />
+    <img src="../public/headshot.jpg" height="100" alt="tia is smiling"/>
     <h2>Summary</h2>
     I am a hardworking and passinate individual Web Developer.
     <hr />
