fix ralative path

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Tianxiao Cheng</h1>
-    <img src="../public/headshot.jpg" height="100" alt="tia is smiling"/>
+    <img src="./public/headshot.jpg" height="100" alt="tia is smiling"/>
     <h2>Summary</h2>
     I am a hardworking and passinate individual Web Developer.
     <hr />
@@ -63,8 +63,8 @@
 
     <h2>other</h2>
     <ul>
-        <li><a href="../public/hobby.html">My Hobbies</a></li>
-        <li><a href="../public/contact.html">Contact Me</a></li>
+        <li><a href="./public/hobby.html">My Hobbies</a></li>
+        <li><a href="./public/contact.html">Contact Me</a></li>
     </ul>
 
 </body>
