--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </ul>
     <hr />
 
-    <h2>other</h2>
+    <h2>Other</h2>
     <ul>
         <li><a href="./public/hobby.html">My Hobbies</a></li>
         <li><a href="./public/contact.html">Contact Me</a></li>
