--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
         <li><a href="./public/hobby.html">My Hobbies</a></li>
         <li><a href="./public/contact.html">Contact Me</a></li>
     </ul>
+    <footer>
+        <p>@ Tianxiao Cheng. All right reserved</p>
+    </footer>
 
 </body>
 </html>
