--- a/index.html
+++ b/index.html
@@ -41,12 +41,22 @@
                 <li>BIS 101 Genes & Gene Expression: Served as A Administrative TA. Help with iClickers in class, deat with logistics, set up accommodation, and helped with exams</li>
             </ul>
         </li>
+
+        <li>
+            <h3>Software Tester Intern</h3>
+            <p>Feb 2022 - July 2022</p>
+            <ul>
+                <li>Developed automated test scripts and data-driving testing using Python and SQL</li>
+                <li>Identified and documented software defects, working closely with the development team and clients to ensure timely resolution and 15\% reduction in sofeware defects</li>
+            </ul>
+        </li>
     </ul>
     <hr />
 
     <h2>Skills</h2>
     <ul>
         <li>HTML: ⭐️⭐️⭐️⭐️⭐️</li>
+        <li>CSS: ⭐️⭐️⭐️⭐️⭐️</li>
         <li>Java: ⭐️⭐️⭐️⭐️</li>
     </ul>
 
