add voluntary experience

--- a/index.html
+++ b/index.html
@@ -43,11 +43,27 @@
         </li>
 
         <li>
-            <h3>Software Tester Intern</h3>
+            <h3>Software Tester Intern - PerkinElmer, Inc.</h3>
             <p>Feb 2022 - July 2022</p>
             <ul>
                 <li>Developed automated test scripts and data-driving testing using Python and SQL</li>
                 <li>Identified and documented software defects, working closely with the development team and clients to ensure timely resolution and 15\% reduction in sofeware defects</li>
+            </ul>
+        </li>
+
+        <li>
+            <h3>One Health Conference Coordinator - University of California, Davis</h3>
+            <p>Jan 2022 - Feb 2022</p>
+            <ul>
+                <li>Coordinated Logistics: Successfully organized attendance and participation for 70 students and 25 professors from 8 universities, ensuring smooth registration and accommodation arrangements.</li>
+                <li>Data Management: Utilized Python and SQL to efficiently manage and analyze student data, optimizing registration processes and tracking participant information.</li>
+                <li>Event Facilitation: Skillfully hosted the conference, including moderating Q&A sessions, leading student paper reading groups, and assisting with team discussions to foster collaborative learning.</li>
+                <li>Documentation and Reporting: Authored comprehensive daily summaries and detailed news of conference proceedings, providing valuable insights and feedback for future events.</li>
+                <li>Closing Ceremony Management: Orchestrated the final closing ceremony, including delivering opening remarks, managing the event schedule, and producing and distributing certificates of participation and achievement.</li>
+                <li>Stakeholder Engagement: Maintained effective communication with university representatives, ensuring alignment of conference goals and addressing any logistical or academic concerns promptly.</li>
+                <li>Problem-Solving: Addressed and resolved any issues that arose during the conference, demonstrating strong organizational and interpersonal skills.</li>
+
+
             </ul>
         </li>
     </ul>
@@ -58,6 +74,7 @@
         <li>HTML: ⭐️⭐️⭐️⭐️⭐️</li>
         <li>CSS: ⭐️⭐️⭐️⭐️⭐️</li>
         <li>Java: ⭐️⭐️⭐️⭐️</li>
+        <li>Python: ⭐️⭐️⭐️⭐️⭐️</li>
     </ul>
 
     <hr />
@@ -71,11 +88,24 @@
     </ul>
     <hr />
 
+    <h2>Voluntary Experience</h2>
+    <ul>
+        <li>Face Painter for kids, Lunar New Year Celebration, Robert E Willett Elementary, Davis (Feb 2023)</li>
+        <li>Volunteer to give a talk about UCD experience, Envision program at UC Davis (Oct 2022)</li>
+        <li>Main volunteer, International Volunteer Day for Social and Economic Development by United Nations (Dec 2021)</li>
+    </ul>
+    <hr />
+
     <h2>Other</h2>
     <ul>
         <li><a href="./public/hobby.html">My Hobbies</a></li>
         <li><a href="./public/contact.html">Contact Me</a></li>
     </ul>
+    <hr />
+
+  
+
+
     <footer>
         <p>@ Tianxiao Cheng. All right reserved</p>
     </footer>
